# stablecoin

./: .gitignore  Cargo.toml  Forc.toml  LICENSE  Makefile  README.md  build-and-test.sh  fuel-toolchain.toml
.github/workflows/: rust.yml
contracts/: Cargo.toml
contracts/active-pool-contract/: Cargo.toml  Forc.toml
contracts/active-pool-contract/src/: main.sw
contracts/active-pool-contract/tests/: harness.rs
contracts/borrow-operations-contract/: Cargo.toml  Forc.toml
contracts/borrow-operations-contract/src/: data_structures.sw  events.sw  main.sw
contracts/borrow-operations-contract/tests/: events.rs  failure.rs  harness.rs  pausing.rs  success.rs
contracts/coll-surplus-pool-contract/: Cargo.toml  Forc.toml
contracts/coll-surplus-pool-contract/src/: main.sw
contracts/coll-surplus-pool-contract/tests/: harness.rs
contracts/community-issuance-contract/: Cargo.toml  Forc.toml
contracts/community-issuance-contract/src/: main.sw  utils.sw
contracts/community-issuance-contract/tests/: harness.rs
contracts/default-pool-contract/: Cargo.toml  Forc.toml
contracts/default-pool-contract/src/: main.sw
contracts/default-pool-contract/tests/: harness.rs
contracts/fpt-staking-contract/: Cargo.toml  Forc.toml
contracts/fpt-staking-contract/src/: data_structures.sw  events.sw  main.sw
contracts/fpt-staking-contract/tests/: events.rs  failure.rs  harness.rs  success.rs
contracts/fpt-token-contract/: Cargo.toml  Forc.toml
contracts/fpt-token-contract/src/: main.sw
contracts/fpt-token-contract/tests/: harness.rs
contracts/hint-helper-contract/: Cargo.toml  Forc.toml
contracts/hint-helper-contract/src/: main.sw
contracts/hint-helper-contract/tests/: harness.rs
contracts/mock-oracle-contract/: Cargo.toml  Forc.toml
contracts/mock-oracle-contract/src/: main.sw
contracts/mock-oracle-contract/tests/: harness.rs
contracts/mock-pyth-contract/: Forc.toml
contracts/mock-pyth-contract/src/: main.sw
contracts/mock-redstone-contract/: Forc.toml
contracts/mock-redstone-contract/src/: main.sw
contracts/mock-stork-contract/: Forc.toml
contracts/mock-stork-contract/src/: main.sw
contracts/multi-trove-getter-contract/: Cargo.toml  Forc.toml
contracts/multi-trove-getter-contract/src/: main.sw
contracts/multi-trove-getter-contract/tests/: harness.rs
contracts/oracle-contract/: Cargo.toml  Forc.toml
contracts/oracle-contract/src/: errors.sw  main.sw
contracts/oracle-contract/tests/: authorization.rs  harness.rs
contracts/protocol-manager-contract/: Cargo.toml  Forc.toml
contracts/protocol-manager-contract/src/: data_structures.sw  main.sw
contracts/protocol-manager-contract/tests/: authorization.rs  harness.rs  success_redemptions.rs  success_redemptions_many.rs
contracts/proxy-contract/: Cargo.toml  Forc.toml
contracts/proxy-contract/tests/: harness.rs  sanity.rs
contracts/sorted-troves-contract/: Cargo.toml  Forc.toml
contracts/sorted-troves-contract/src/: main.sw
contracts/sorted-troves-contract/tests/: harness.rs
contracts/sorted-troves-contract/tests/artifacts/: Cargo.toml  Forc.toml
contracts/sorted-troves-contract/tests/artifacts/src/: main.sw
contracts/sorted-troves-contract/tests/functions/: sort.rs
contracts/sorted-troves-contract/tests/utils/: mod.rs  setup.rs  sorted_troves.rs  trove_manager.rs
contracts/src/: interface.sw  main.sw
contracts/src/lib/: data_structures.sw  utils.sw
contracts/stability-pool-contract/: Cargo.toml  Forc.toml
contracts/stability-pool-contract/src/: data_structures.sw  events.sw  main.sw
contracts/stability-pool-contract/tests/: harness.rs
contracts/tests-artifacts-sorted-troves-contract/: Cargo.toml  Forc.toml
contracts/tests-artifacts-stability-pool-contract/: Cargo.toml  Forc.toml
contracts/tests-artifacts-stability-pool-contract/artifacts/: Forc.toml
contracts/tests-artifacts-stability-pool-contract/artifacts/src/: main.sw
contracts/tests-artifacts-stability-pool-contract/functions/: failure.rs  success.rs
contracts/tests-artifacts-stability-pool-contract/src/: main.sw
contracts/tests-artifacts-stability-pool-contract/utils/: setup.rs
contracts/token-contract/: Cargo.toml  Forc.toml
contracts/token-contract/src/: main.sw
contracts/trove-manager-contract/: Cargo.toml  Forc.toml
contracts/usdf-token-contract/: Cargo.toml  Forc.toml
contracts/usdf-token-contract/src/: main.sw
contracts/usdf-token-contract/tests/: harness.rs
contracts/usdm-token-contract/: Forc.toml
contracts/vesting-contract/: Cargo.toml  Forc.toml
deploy-scripts/: .SAMPLE_ENV  Cargo.toml  env.sample
deploy-scripts/src/: add_asset.rs  add_assets.rs  constants.rs  deploy.rs  lib.rs  main.rs  pause.rs  sanity_check.rs  transfer_ownership.rs  utils.rs
deploy-scripts/vesting/: test_vesting.json
deployments/: testnet.json
libraries/: Forc.toml
libraries/src/: active_pool_interface.sw  borrow_operations_interface.sw  coll_surplus_pool_interface.sw  community_issuance_interface.sw  data_structures.sw  default_pool_interface.sw  fluid_math.sw  fpt_staking_interface.sw  fpt_token_interface.sw  interface.sw  mock_oracle_interface.sw  numbers.sw  oracle_interface.sw  pool_interface.sw  protocol_manager_interface.sw  sorted_troves_interface.sw  stability_pool_interface.sw  stork_interface.sw  token_interface.sw  trove_manager_interface.sw  usdf_token_interface.sw  usdm_token_interface.sw
scripts/: generate-types.sh
test-utils/: .SAMPLE_ENV  Cargo.toml  contractsB3.json
test-utils/pkg/sumdb/sum.golang.org/: latest
test-utils/src/: data_structures.rs  deploy.rs  interface.rs  lib.rs  main.rs  paths.rs  setup.rs  testing_query_manual.rs  utils.rs
test-utils/src/interfaces/: active_pool.rs  borrow_operations.rs  coll_surplus_pool.rs  community_issuance.rs  default_pool.rs  fpt_staking.rs  fpt_token.rs  hint_helper.rs  mod.rs  multi_trove_getter.rs  oracle.rs  protocol_manager.rs  proxy.rs  pyth_oracle.rs  redstone_oracle.rs  sorted_troves.rs  stability_pool.rs  stork_oracle.rs  token.rs  trove_manager.rs  usdf_token.rs  usdm_token.rs  vesting.rs
(+35 files in other folders)
