[workspace]
resolver = "2"
members = [
    "./contracts/mock-oracle-contract",
    "./contracts/stability-pool-contract",
    "./contracts/trove-manager-contract",
    "./contracts/vesting-contract",
    "./contracts/sorted-troves-contract",
    "./contracts/borrow-operations-contract",
    "./contracts/protocol-manager-contract",
    "./contracts/token-contract",
    "./contracts/usdf-token-contract",
    "./contracts/active-pool-contract",
    "./contracts/coll-surplus-pool-contract",
    "./contracts/default-pool-contract",
    "./contracts/fpt-staking-contract",
    "./contracts/fpt-token-contract",
    "./contracts/community-issuance-contract",
    "./contracts/tests-artifacts-sorted-troves-contract",
    # "./contracts/tests-artifacts-stability-pool-contract",
    "./test-utils",
]
