[workspace]
resolver = "2"
members = [
    "./contracts/oracle-contract",
    "./contracts/stability-pool-contract",
    "./contracts/trove-manager-contract",
    "./contracts/vesting-contract",
    "./contracts/sorted-troves-contract",
    "./contracts/borrow-operations-contract",
    "./contracts/protocol-manager-contract",
    "./contracts/token-contract",
    "./contracts/usdf-token-contract",
    "./contracts/active-pool-contract",
    "./contracts/coll-surplus-pool-contract",
    "./contracts/default-pool-contract",
    "./contracts/fpt-staking-contract",
    "./contracts/fpt-token-contract",
    "./contracts/community-issuance-contract",
    "./contracts/hint-helper-contract",
    "./contracts/tests-artifacts-sorted-troves-contract",
    "./contracts/tests-artifacts-stability-pool-contract",
    "./contracts/multi-trove-getter-contract",
    "./deploy-scripts",
    "./test-utils",
]

[workspace.dependencies]
dotenv = "0.15.0"
fuels = { version = "0.66.2", features = ["fuel-core-lib"] }
futures = "0.3.17"
pbr = "1.1.1"
rand = { version = "0.8.5", features = ["std_rng", "getrandom"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.21.0", features = ["rt", "macros"] }
test-utils = { path = "./test-utils" }
