[package]
name = "deploy-scripts"
version = "0.0.0"
authors = ["Hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
dotenv = "0.15.0"
fuels = { workspace = true }
futures = "0.3.17"
pbr = "1.1.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.92"
test-utils = { path = "../test-utils" }
tokio = { version = "1.21.0", features = ["rt", "macros"] }

[lib]
doctest = false
test = false
