[package]
name = "test-utils"
version = "0.0.0"
authors = ["Hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
dotenv = { workspace = true, default-features = false }
fuels = { workspace = true, default-features = false }
futures = { workspace = true, default-features = false }
pbr = { workspace = true, default-features = false }
rand = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false }

[lib]
doctest = false
