[package]
name = "test-utils"
version = "0.0.0"
authors = ["Hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
csv = { workspace = true }
dotenv = { workspace = true }
fuels = { workspace = true }
futures = { workspace = true }
pbr = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tai64 = { workspace = true }
tokio = { workspace = true }

[lib]
doctest = false
test = false
