[package]
name = "hint-helper-contract"
version = "0.1.0"
authors = ["hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.55.0", features = ["fuel-core-lib"] }
test-utils = { path = "../../test-utils" }
tokio = { version = "1.21.0", features = ["rt", "macros"] }

# Not the latest version because of indexer bug o.o 

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
