[package]
name = "mock-oracle-contract"
version = "0.1.0"
authors = ["hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.32", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
# Not the latest version because of indexer bug o.o 
# TODO - update when fixed

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"