[package]
name = "oracle-contract"
version = "0.1.0"
authors = ["hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { workspace = true }
test-utils = { path = "../../test-utils" }
tokio = { workspace = true }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
