[package]
name = "sorted-troves-contract"
version = "0.1.0"
authors = ["hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
test-utils = { path = "../../test-utils" }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
