[package]
name = "mock-trove-manager-sp-contract"
version = "0.1.0"
authors = ["hydrogen-labs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false }

# Not the latest version because of indexer bug o.o 

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
